# Jazz-jit

./: Cargo.toml  README.md  a.out  file.cc  jazz-jit.hpp
examples/: call.rs  float4.rs  int_add.rs
src/: assembler.rs  assembler_x64.rs  avx.rs  constants_x64.rs  dseg.rs  generic.rs  lib.rs  main.rs  vector_extension_x64.rs
src/utils/: mod.rs
