[package]
name = "jazz-jit"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
byteorder = "1.3.1"
capstone = "0.5.0"
paste = "0.1.5"

[lib]
crate-type = ["rlib", "cdylib"]
[build-dependencies]
cbindgen = "0.8"

[dependencies.winapi]
features = ["winuser","memoryapi"]
version = "0.3"
